# simplez_asm

./: Cargo.toml  README.md  build-web.sh  fib.txt  index.html  simplez_gui-40e7912ea86d84b6.js  simplez_gui-40e7912ea86d84b6_bg.wasm  simplez_gui-a5910595c88e74dd.js  simplez_gui-a5910595c88e74dd_bg.wasm  simplez_gui-ec1da29cf89837cf.js  simplez_gui-ec1da29cf89837cf_bg.wasm  sw.js  syntax.yaml  template.html  test.sz  worm.sz
assembler/: Cargo.toml
assembler/src/: lib.rs
assets/: manifest.json
common/: Cargo.toml
common/src/: lib.rs  util.rs
docs/: simplez_gui-5f0abdb4676d320f_bg.wasm  sw.js
interpreter/: Cargo.toml
interpreter/src/: lib.rs
src/: app.rs  highlighter.rs  main.rs
