[package]
name = "simplez_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
simplez_common = { path = "common" }
simplez_assembler = { path = "assembler" }
simplez_interpreter = { path = "interpreter" }
syntect = { version = "5.0.0", default-features = false, features = [
    # Use Rust regex impl instead of an external C lib
    "default-fancy",
] }
egui_extras = "0.19.0"
twelve_bit = { git = "https://github.com/aleokdev/12bit", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm

[workspace]
members = ["assembler", "common", "interpreter"]

# Syntect with the default-fancy feature is really slow on debug, so compile with opts
[profile.dev.package.syntect]
opt-level = 2
