[package]
name = "simplez_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
simplez_common = { path = "../common" }
thiserror = "1.0.37"
twelve_bit = { git = "https://github.com/aleokdev/12bit" }
